# ESP32-S3_MobileNetV2-OV5640

./: .gitignore  ALGORITHM_OPTIMIZATION.md  BUILD_CHEATSHEET.md  CMakeLists.txt  DOCUMENT_UPDATE_LOG.md  ESP32_TO_WS63_PLAN.md  IMPLEMENTATION_SUMMARY.md  MODULAR_REFACTORING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.en.md  README.md  RELEASE_NOTES_V2.4.md  TROUBLESHOOTING.md  TROUBLESHOOTING_SUMMARY.md  USER_GUIDE.md  partitions.csv  setup_env.bat
docs/: L610_DEBUG_GUIDE.md  MONITOR_CODE.md  PROTOCOL.md  QUICKSTART.md  TROUBLESHOOTING.md  USER_GUIDE.md  WS63_ESP32_PROTOCOL.md  WS63_UART_屏协议_Page1-4.md  串口屏端侧代码汇总.md
docs/plan/: TODOs.md  (+1 more)
main/: CMakeLists.txt  ai_module.c  ai_module.h  asset_manager.c  asset_manager.h  camera_module.c  camera_module.h  camera_stream.c  camera_stream.h  cmd_handler.c  feature_processor.c  main.c  main.h  mobilenet_wrapper.cpp  protocol_handler.c  protocol_handler.h  similarity_matcher.h  storage_module.c  storage_module.h
main/modules/4g/: l610_config.h  l610_driver.c  l610_driver.h  l610_manager.c  l610_manager.h  l610_mqtt.c  l610_mqtt.h
main/modules/ai/: blur_detection.c  blur_detection.h  feature_processor.h  mobilenet_wrapper.h  similarity_matcher.c
main/modules/camera/: camera_module.c  camera_module.h
main/modules/system/: asset_manager.c  asset_manager.h  cmd_handler.c  cmd_handler.h  led_indicator.c  led_indicator.h  protocol_handler.c  protocol_handler.h  storage_module.h  tag_id_validator.c  tag_id_validator.h  verify_config.h  verify_handler.c  verify_handler.h
main/modules/system/verify/: verify_config.h
(+13 files in other folders)
