idf_component_register(SRCS "modules/system/protocol_handler.c" "main.c" "modules/system/asset_manager.c" "modules/camera/camera_module.c" "modules/system/storage_module.c" "modules/ai/ai_module.c" "modules/ai/mobilenet_wrapper.cpp" "modules/system/cmd_handler.c" "modules/system/led_indicator.c" "modules/ai/feature_processor.c" "modules/ai/similarity_matcher.c" "modules/ai/blur_detection.c" "modules/4g/l610_driver.c" "modules/4g/l610_mqtt.c" "modules/4g/l610_manager.c"
                    INCLUDE_DIRS "." "modules/ai" "modules/camera" "modules/system" "modules/4g"
                    REQUIRES esp32-camera esp-dl imagenet_cls fatfs sdmmc nvs_flash driver json)
